src/test/ui/suggestions/imm-ref-trait-object-literal-bound-regions.stderr
error[E0277]: the trait bound `for<'b> &'b S: Trait` is not satisfied
  --> $DIR/imm-ref-trait-object-literal-bound-regions.rs:17:5
   |
LL | fn foo<X>(_: X)
   |    --- required by a bound in this
LL | where
LL |     for<'b> &'b X: Trait,
   |                    ----- required by this bound in `foo`
...
LL |     foo::<S>(s);
   |     ^^^^^^^^ the trait `for<'b> Trait` is not implemented for `&'b S`
   |
   = help: the following implementations were found:
             <&'a mut S as Trait>

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
